fixed color contrast problem and CSS flex

--- a/styles/base.css
+++ b/styles/base.css
@@ -18,7 +18,7 @@
 header {
   width: 100%;
   height: 14vw;
-  background-color: rgb(232, 50, 50);
+  background-color: #aa1313;
   display: flex;
   justify-content: center;
 }
@@ -34,17 +34,14 @@ h1 {
 }
 
 nav ul {
-  display: flex;
-  justify-content: space-between;
-  margin: 30px 90px auto 90px;
-  height: 60px;
-  padding: 0;
+  text-align: center;
 }
 
 nav li {
   list-style-type: none;
   vertical-align: middle;
   font-family: RobotoCondensed;
+  padding-bottom: 2vw;
 }
 
 nav li a {
@@ -55,7 +52,7 @@ nav li a {
 }
 
 nav li a:hover {
-  color: rgb(232, 50, 50);
+  color: #aa1313;
 }
 
 body {
@@ -83,7 +80,7 @@ section ul {
 }
 
 h3 {
-  background-color: rgb(232, 50, 50);
+  background-color: #aa1313;
   color: white;
   margin: 0;
   border-radius: 5%;
@@ -91,7 +88,7 @@ h3 {
 }
 
 footer {
-  background-color: rgb(232, 50, 50);
+  background-color: #aa1313;
   color: white;
   text-align: center;
 }
